--- a/index.html
+++ b/index.html
@@ -3,10 +3,49 @@
 	<head>
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+		<link rel="stylesheet" href="src/style.css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Vite + TS</title>
 	</head>
 	<body>
+		<main>
+			<div class="card">
+				<h1>Contact Us</h1>
+				<form>
+					<div class="col">
+						<label for="firstname">
+							<span>First Name</span>
+							<input
+								type="text"
+								name="firstname"
+								id="firstname"
+								required
+							/>
+						</label>
+						<label for="lastname">
+							<span>Last Name</span>
+							<input
+								type="text"
+								name="lastname"
+								id="lastname"
+								required
+							/>
+						</label>
+					</div>
+					<div class="col">
+						<label for="email">
+							<span>Email Address</span>
+							<input
+								type="email"
+								name="email"
+								id="email"
+								required
+							/>
+						</label>
+					</div>
+				</form>
+			</div>
+		</main>
 		<script type="module" src="/src/main.ts"></script>
 	</body>
 </html>
