feat: basic html validation

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 								class="form-control"
 								autocomplete="given-name"
 								required
+								maxlength="32"
 							/>
 						</div>
 						<div>
@@ -33,6 +34,7 @@
 								class="form-control"
 								autocomplete="family-name"
 								required
+								maxlength="32"
 							/>
 						</div>
 					</div>
@@ -46,6 +48,7 @@
 								class="form-control"
 								autocomplete="email"
 								required
+								maxlength="64"
 							/>
 						</div>
 					</div>
@@ -95,6 +98,7 @@
 								id="message"
 								rows="4"
 								required
+								maxlength="256"
 							></textarea>
 						</div>
 					</div>
