feat: basic html validation

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 								id="firstname"
 								class="form-control"
 								required
+								maxlength="32"
 							/>
 						</div>
 						<div>
@@ -31,6 +32,7 @@
 								id="lastname"
 								class="form-control"
 								required
+								maxlength="32"
 							/>
 						</div>
 					</div>
@@ -43,6 +45,7 @@
 								id="email"
 								class="form-control"
 								required
+								maxlength="64"
 							/>
 						</div>
 					</div>
@@ -88,6 +91,7 @@
 								id="message"
 								rows="4"
 								required
+								maxlength="256"
 							></textarea>
 						</div>
 					</div>
