--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 				<form>
 					<div class="col">
 						<div>
-							<label for="firstname">First Name</label>
+							<label class="required" for="firstname"
+								>First Name</label
+							>
 							<input
 								type="text"
 								name="firstname"
@@ -25,7 +27,9 @@
 							/>
 						</div>
 						<div>
-							<label for="lastname">Last Name</label>
+							<label class="required" for="lastname"
+								>Last Name</label
+							>
 							<input
 								type="text"
 								name="lastname"
@@ -38,7 +42,9 @@
 					</div>
 					<div class="col">
 						<div>
-							<label for="email">Email Address</label>
+							<label class="required" for="email"
+								>Email Address</label
+							>
 							<input
 								type="email"
 								name="email"
@@ -50,7 +56,7 @@
 						</div>
 					</div>
 					<fieldset>
-						<legend>Query Type</legend>
+						<legend class="required">Query Type</legend>
 						<div class="col">
 							<div>
 								<input
@@ -88,7 +94,9 @@
 					</fieldset>
 					<div class="col">
 						<div>
-							<label for="message">Message</label>
+							<label class="required" for="message"
+								>Message</label
+							>
 							<textarea
 								name="message"
 								class="form-control"
@@ -99,7 +107,7 @@
 						</div>
 					</div>
 					<div class="col">
-						<label for="consent">
+						<label class="required" for="consent">
 							<input
 								type="checkbox"
 								name="consent"
