refactor: consent checkbox html

--- a/index.html
+++ b/index.html
@@ -107,19 +107,23 @@
 						</div>
 					</div>
 					<div class="col">
-						<label class="required" for="consent">
+						<div>
 							<input
 								type="checkbox"
 								name="consent"
 								id="consent"
 								required
 							/>
-							<div
-								class="custom-checkbox"
-								aria-hidden="true"
-							></div>
-							I consent to being contacted by the team.
-						</label>
+							<label for="consent">
+								<div
+									class="custom-checkbox"
+									aria-hidden="true"
+								></div>
+								<span class="required">
+									I consent to being contacted by the team.
+								</span>
+							</label>
+						</div>
 					</div>
 					<button>Submit</button>
 				</form>
