fix: aria attributes

--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
 								autocomplete="given-name"
 								required
 								maxlength="32"
+								aria-describedby="firstname-error"
 							/>
 							<div
+								id="firstname-error"
 								class="error-message"
 								data-errorFor="firstname"
-								aria-live="polite"
 							></div>
 						</div>
 						<div>
@@ -44,11 +45,12 @@
 								autocomplete="family-name"
 								required
 								maxlength="32"
+								aria-describedby="lastname-error"
 							/>
 							<div
+								id="lastname-error"
 								class="error-message"
 								data-errorFor="lastname"
-								aria-live="polite"
 							></div>
 						</div>
 					</div>
@@ -65,11 +67,12 @@
 								autocomplete="email"
 								required
 								maxlength="64"
+								aria-describedby="email-error"
 							/>
 							<div
+								id="email-error"
 								class="error-message"
 								data-errorFor="email"
-								aria-live="polite"
 							></div>
 						</div>
 					</div>
@@ -83,6 +86,7 @@
 									value="general"
 									id="general"
 									required
+									aria-describedby="querytype-error"
 								/>
 								<label class="form-control" for="general">
 									<div
@@ -99,6 +103,7 @@
 									value="support"
 									id="support"
 									required
+									aria-describedby="querytype-error"
 								/>
 								<label class="form-control" for="support">
 									<div
@@ -110,9 +115,9 @@
 							</div>
 						</div>
 						<div
+							id="querytype-error"
 							class="error-message"
 							data-errorFor="querytype"
-							aria-live="polite"
 						></div>
 					</fieldset>
 					<div class="col">
@@ -127,11 +132,12 @@
 								rows="4"
 								required
 								maxlength="256"
+								aria-describedby="message-error"
 							></textarea>
 							<div
+								id="message-error"
 								class="error-message"
 								data-errorFor="message"
-								aria-live="polite"
 							></div>
 						</div>
 					</div>
@@ -142,6 +148,7 @@
 								name="consent"
 								id="consent"
 								required
+								aria-describedby="consent-error"
 							/>
 							<label for="consent">
 								<div
@@ -153,9 +160,9 @@
 								</div>
 							</label>
 							<div
+								id="consent-error"
 								class="error-message"
 								data-errorFor="consent"
-								aria-live="polite"
 							></div>
 						</div>
 					</div>
