feat: show snackbar on submit

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<title>Vite + TS</title>
 	</head>
 	<body>
+		<div class="snackbar" aria-live="polite"></div>
 		<main>
 			<div class="card">
 				<h1>Contact Us</h1>
